Fixed miss alignment with experience timeline

--- a/app/styles/_experience.scss
+++ b/app/styles/_experience.scss
@@ -11,16 +11,18 @@
     background-color: rgba($primary-green, 0.2);
     display: block;
     position: absolute;
-    top: 23%;
+    top: 20%;
     left: 0;
     bottom: 25%;
     right: 0;
     margin: auto;
     z-index: -1;
+    @media only screen and (min-width: $mobile-width) {
+      bottom: 35%;
+    }
   }
 }
 .experience-item {
-  margin-bottom: 20px;
 
   .experience-item-inner {
     position: relative;
